# bazinga

./: CMakeLists.txt  README.md
src/: keyType.h  main.cc  sm.c  sm.h  utils.h
